Extra import files
Added:
_tables_spacing.styl
_typography.styl
_utilities.styl

Updated:
_buttons.styl
layout.styl

--- a/src/stylus/_buttons.styl
+++ b/src/stylus/_buttons.styl
@@ -2,6 +2,7 @@ $btn_neutral = #6a98e1 //Blue
 $btn_bad = #F74662 //Red
 $btn_medium = #FFA86A //Orange
 $btn_good = #60E59E //Green
+$default_font_colour = #333
 
 // Default Button with Transparent Background
 .btn,button,input[type="submit"],input[type="reset"],input[type="button"]
