--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -1,7 +1,8 @@
 @import '_normalize'
 @import '_grid'
 @import '_visible_hidden'
-@import '_base_styles'
-@import '_buttons'
-@import 'font-awesome/index.styl'
 @import '_typography'
+@import '_buttons'
+@import '_tables_spacing'
+@import '_utilities'
+@import 'font-awesome/index.styl'
