--- a/src/stylus/_typography.styl
+++ b/src/stylus/_typography.styl
@@ -4,6 +4,58 @@ $h3_size = 3rem
 $h4_size = 2.4rem
 $h5_size = 1.8rem
 $h6_size = 1.5rem
+$default_font_colour = #333
+
+html
+  font-size 62.5%
+body
+  font-size 1.5em
+  line-height 1.6
+  font-weight 400
+  color $default_font_colour
+
+h1,h2,h3,h4,h5,h6
+  margin-top 0
+  margin-bottom 2rem
+  font-weight 300
+h1
+  line-height 1.2
+  letter-spacing -.1rem
+h2
+  line-height 1.25
+  letter-spacing -.1rem
+h3
+  line-height 1.3
+  letter-spacing -.1rem
+h4
+  line-height 1.35
+  letter-spacing -.08rem
+h5
+  line-height 1.5
+  letter-spacing -.05rem
+h6
+  line-height 1.6
+  letter-spacing 0
+p
+  margin-top 0
+  
+a
+  color darken($default_font_colour,10)
+  &:hover
+    color darken($default_font_colour,15)
+    
+code
+  padding .2rem .5rem
+  margin 0 .2rem
+  font-size 90%
+  white-space nowrap
+  background #F1F1F1
+  border 1px solid #E1E1E1
+  border-radius 4px
+pre > code 
+  display block
+  padding 1rem 1.5rem
+  white-space pre
 
 @media (max-width 767px)
   h1
@@ -49,6 +101,15 @@ $h6_size = 1.5rem
 @media (min-width 1200px)
   h1
     font-size $h1_size
-  
+  h2
+    font-size $h2_size
+  h3
+    font-size $h3_size
+  h4
+    font-size $h4_size
+  h5
+    font-size $h5_size
+  h6
+    font-size $h6_size
 
 // @media (min-width 1200px)
