Moved Colour Scheme
To layout.styl
All variables will be moved to top of layout.styl in future

--- a/src/stylus/_buttons.styl
+++ b/src/stylus/_buttons.styl
@@ -1,9 +1,3 @@
-$btn_neutral = #6a98e1 //Blue
-$btn_bad = #F74662 //Red
-$btn_medium = #FFA86A //Orange
-$btn_good = #60E59E //Green
-$default_font_colour = #333
-
 // Default Button with Transparent Background
 .btn,button,input[type="submit"],input[type="reset"],input[type="button"]
   display inline-block
@@ -37,56 +31,56 @@ $default_font_colour = #333
 // Blue Background
 .btn-round.btn-neutral,.btn.btn-neutral,button.btn-neutral,input[type="submit"].btn-neutral,input[type="reset"].btn-neutral,input[type="button"].btn-neutral, bt 
   color #FFF
-  background-color $btn_neutral
-  border-color $btn_neutral
+  background-color $neutral
+  border-color $neutral
   &:hover
     color #FFF
-    background-color darken($btn_neutral,5)
-    border-color darken($btn_neutral,5)
+    background-color darken($neutral,5)
+    border-color darken($neutral,5)
   &:focus
     color #FFF
-    background-color darken($btn_neutral,5)
-    border-color darken($btn_neutral,5)
+    background-color darken($neutral,5)
+    border-color darken($neutral,5)
 
 // Red Background   
 .btn-round.btn-bad,.btn.btn-bad,button.btn-bad,input[type="submit"].btn-bad,input[type="reset"].btn-bad,input[type="button"].btn-bad 
   color #FFF
-  background-color $btn_bad
-  border-color $btn_bad
+  background-color $bad
+  border-color $bad
   &:hover
     color #FFF
-    background-color darken($btn_bad,5)
-    border-color darken($btn_bad,5)
+    background-color darken($bad,5)
+    border-color darken($bad,5)
   &:focus
     color #FFF
-    background-color darken($btn_bad,5)
-    border-color darken($btn_bad,5)
+    background-color darken($bad,5)
+    border-color darken($bad,5)
 
 // Orange Background
 .btn-round.btn-medium,.btn.btn-medium,button.btn-medium,input[type="submit"].btn-medium,input[type="reset"].btn-medium,input[type="button"].btn-medium 
   color #FFF
-  background-color $btn_medium
-  border-color $btn_medium
+  background-color $medium
+  border-color $medium
   &:hover
     color #FFF
-    background-color darken($btn_medium,5)
-    border-color darken($btn_medium,5)
+    background-color darken($medium,5)
+    border-color darken($medium,5)
   &:focus
     color #FFF
-    background-color darken($btn_medium,5)
-    border-color darken($btn_medium,5)
+    background-color darken($medium,5)
+    border-color darken($medium,5)
 
 // Green Background    
 .btn-round.btn-good,.btn.btn-good,button.btn-good,input[type="submit"].btn-good,input[type="reset"].btn-good,input[type="button"].btn-good 
   color #FFF
-  background-color $btn_good
-  border-color $btn_good
+  background-color $good
+  border-color $good
   &:hover
     color #FFF
-    background-color darken($btn_good,5)
-    border-color darken($btn_good,5)
+    background-color darken($good,5)
+    border-color darken($good,5)
   &:focus
     color #FFF
-    background-color darken($btn_good,5)
-    border-color darken($btn_good,5)
+    background-color darken($good,5)
+    border-color darken($good,5)
     
