--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -1,3 +1,11 @@
+/* COLOUR SCHEME */
+$neutral = #6A98E1 //Blue
+$bad = #F74662 //Red
+$medium = #FFA86A //Orange
+$good = #60E59E //Green
+$default_font_colour = #333 //Grey
+
+/* IMPORTS */
 @import '_normalize'
 @import '_grid'
 @import '_visible_hidden'
