Added Slick Carousel
Slick files for carousel usage added.
JS files are kept in the dist folder and haven't been added yet. They
will be added in future.

--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -5,6 +5,25 @@ $medium = #FFA86A //Orange
 $good = #60E59E //Green
 $default_font_colour = #333 //Grey
 
+/* DEFAULT PATHS */
+$font_path = "../fonts/"
+$img_path = "../img/"
+
+/* SLICK CAROUSEL VARIABLES */
+$slick-font-path = "../fonts/" !default
+$slick-font-family = "slick" !default
+$slick-loader-path = "./" !default
+$slick-arrow-color = white !default
+$slick-dot-color = black !default
+$slick-dot-color-active =  $slick-dot-color !default
+$slick-prev-character =  ">" !default
+$slick-next-character =  "<" !default
+$slick-dot-character =  "•" !default
+$slick-dot-size =  6px !default
+$slick-opacity-default =  0.75 !default
+$slick-opacity-on-hover =  1 !default
+$slick-opacity-not-active =  0.25 !default
+
 /* IMPORTS */
 @import '_normalize'
 @import '_grid'
@@ -14,3 +33,5 @@ $default_font_colour = #333 //Grey
 @import '_tables_spacing'
 @import '_utilities'
 @import 'font-awesome/index.styl'
+@import 'slick/_slick.styl'
+@import 'slick/_slick-theme.styl'
