Created Animation files
Segment.js
temp animation code for layout
custom animation code

--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -32,6 +32,7 @@ $slick-opacity-not-active =  0.25 !default
 @import '_buttons'
 @import '_tables_spacing'
 @import '_utilities'
+@import '_animations'
 @import 'font-awesome/index.styl'
 @import 'slick/_slick.styl'
 @import 'slick/_slick-theme.styl'
