--- a/src/stylus/_grid.styl
+++ b/src/stylus/_grid.styl
@@ -1,9 +1,7 @@
-$12_rise_wth = 100%
-$1_rise_wth = $12_rise_wth / 12
 rise_width($rise_num)
   $1_rise_wth * $rise_num
 
-.rise-1,.rise-2,.rise-3,.rise-4,.rise-5,.rise-6,.rise-7,.rise-8,.rise-9,.rise-10,.rise-11,.rise-12,.rise-tab-1,.rise-tab-2,.rise-tab-3,.rise-tab-4,.rise-tab-5,.rise-tab-6,.rise-tab-7,.rise-tab-8,.rise-tab-9,.rise-tab-10,.rise-tab-11,.rise-tab-12,.rise-lap-1,.rise-lap-2,.rise-lap-3,.rise-lap-4,.rise-lap-5,.rise-lap-6,.rise-lap-7,.rise-lap-8,.rise-lap-9,.rise-lap-10,.rise-lap-11,.rise-lap-12,.rise-wide-1,.rise-wide-2,.rise-wide-3,.rise-wide-4,.rise-wide-5,.rise-wide-6,.rise-wide-7,.rise-wide-8,.rise-wide-9,.rise-wide-10,.rise-wide-11,.rise-wide-12
+.rise-1,.rise-2,.rise-3,.rise-4,.rise-5,.rise-6,.rise-7,.rise-8,.rise-9,.rise-10,.rise-11,.rise-12,.rise-s1,.rise-s2,.rise-s3,.rise-s4,.rise-s5,.rise-s6,.rise-s7,.rise-s8,.rise-s9,.rise-s10,.rise-s11,.rise-s12,.rise-m1,.rise-m2,.rise-m3,.rise-m4,.rise-m5,.rise-m6,.rise-m7,.rise-m8,.rise-m9,.rise-m10,.rise-m11,.rise-m12,.rise-l1,.rise-l2,.rise-l3,.rise-l4,.rise-l5,.rise-l6,.rise-l7,.rise-l8,.rise-l9,.rise-l10,.rise-l11,.rise-l12
   width 100%
   float left
   box-sizing border-box
@@ -12,12 +10,12 @@ rise_width($rise_num)
   max-width 100%
   clear both
   margin 0 auto
-.Pod /* Width restricted container 960px max */
+.pod /* Width restricted container 960px max */
   position relative
   width 100%
-  max-width 960px
-  margin 0 auto
-  padding 0 20px
+  max-width 96%
+  margin-left 5px
+  margin-right 5px
   box-sizing border-box
   
 .rise-1
