--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -1,30 +1,5 @@
-/* COLOUR SCHEME */
-$neutral = #6A98E1 //Blue
-$bad = #F74662 //Red
-$medium = #FFA86A //Orange
-$good = #60E59E //Green
-$default_font_colour = #333 //Grey
-
-/* DEFAULT PATHS */
-$font_path = "../fonts/"
-$img_path = "../img/"
-
-/* SLICK CAROUSEL VARIABLES */
-$slick-font-path = "../fonts/" !default
-$slick-font-family = "slick" !default
-$slick-loader-path = "./" !default
-$slick-arrow-color = white !default
-$slick-dot-color = black !default
-$slick-dot-color-active =  $slick-dot-color !default
-$slick-prev-character =  ">" !default
-$slick-next-character =  "<" !default
-$slick-dot-character =  "•" !default
-$slick-dot-size =  6px !default
-$slick-opacity-default =  0.75 !default
-$slick-opacity-on-hover =  1 !default
-$slick-opacity-not-active =  0.25 !default
-
 /* IMPORTS */
+@import '_config' 
 @import '_normalize'
 @import '_grid'
 @import '_visible_hidden'
