Added default fonts
Added SoftElegance.ttf and Monofur.ttf

These are 100% and will be distributed with the full download and kept
within dist/assets/fonts/

--- a/src/stylus/_buttons.styl
+++ b/src/stylus/_buttons.styl
@@ -1,4 +1,4 @@
-// Default Button with Transparent Background
+/* Default Button with Transparent Background */
 .btn,button,input[type="submit"],input[type="reset"],input[type="button"]
   display inline-block
   height 30px
@@ -24,7 +24,8 @@
     color $default_font_colour
     border-color #888
     outline 0
-.btn-round
+
+.btn-round /* Round cornered button variation */
   @extend .btn
   border-radius 4px
   
