--- a/src/stylus/_grid.styl
+++ b/src/stylus/_grid.styl
@@ -19,7 +19,7 @@ rise_width($rise_num)
   box-sizing border-box
   
 .rise-1
-  width rise_width(1)    
+  width $1_rise_wth    
 .rise-2
   width rise_width(2)
 .rise-3
@@ -44,7 +44,7 @@ rise_width($rise_num)
   width rise_width(12)
   margin-left 0
 .offset-1
-  margin-left rise_width(1)
+  margin-left $1_rise_wth
 .offset-2
   margin-left rise_width(2) 
 .offset-3
@@ -68,7 +68,7 @@ rise_width($rise_num)
   
 @media (min-width 768px)
   .rise-s1
-  width rise_width(1)    
+    width $1_rise_wth
   .rise-s2
     width rise_width(2)
   .rise-s3
@@ -93,7 +93,7 @@ rise_width($rise_num)
     width rise_width(12)
     margin-left 0
   .offset-s1
-    margin-left rise_width(1)
+    margin-left $1_rise_wth
   .offset-s2
     margin-left rise_width(2) 
   .offset-s3
@@ -117,7 +117,7 @@ rise_width($rise_num)
 
 @media (min-width 992px)
   .rise-m1
-    width rise_width(1)    
+    width $1_rise_wth   
   .rise-m2
     width rise_width(2)
   .rise-m3
@@ -142,7 +142,7 @@ rise_width($rise_num)
     width rise_width(12)
     margin-left 0
   .offset-m1
-    margin-left rise_width(1)
+    margin-left $1_rise_wth
   .offset-m2
     margin-left rise_width(2) 
   .offset-m3
@@ -166,7 +166,7 @@ rise_width($rise_num)
     
 @media (min-width 1200px)
   .rise-l1
-    width rise_width(1)    
+    width $1_rise_wth    
   .rise-l2
     width rise_width(2)
   .rise-l3
@@ -191,7 +191,7 @@ rise_width($rise_num)
     width rise_width(12)
     margin-left 0
   .offset-l1
-    margin-left rise_width(1)
+    margin-left $1_rise_wth
   .offset-l2
     margin-left rise_width(2) 
   .offset-l3
