--- a/src/stylus/_visible_hidden.styl
+++ b/src/stylus/_visible_hidden.styl
@@ -1,36 +1,36 @@
 @media (max-width 767px)
-  .hide-mob
+  .hide-default
     display none    
-  .show-tab
+  .show-s
     display none    
-  .show-lap
+  .show-m
     display none
-  .show-des
+  .show-l
     display none
 @media (min-width 768px)
-  .hide-tab
+  .hide-s
     display none
-  .show-mob
+  .show-default
     display none
-  .show-lap
+  .show-m
     display none
-  .show-des
+  .show-l
     display none
 @media (min-width 992px)
-  .hide-lap
+  .hide-m
     display none
-  .show-mob
+  .show-default
     display none
-  .show-tab
+  .show-s
     display none        
-  .show-des
+  .show-l
     display none
 @media (min-width 1200px)
-  .hide-des
+  .hide-l
     display none
-  .show-mob
+  .show-default
     display none
-  .show-tab
+  .show-s
     display none
-  .show-lap
+  .show-m
     display none
