--- a/src/stylus/_typography.styl
+++ b/src/stylus/_typography.styl
@@ -1,18 +1,11 @@
-$h1_size = 4rem
-$h2_size = 3.6rem
-$h3_size = 3rem
-$h4_size = 2.4rem
-$h5_size = 1.8rem
-$h6_size = 1.5rem
-$default_font_colour = #333
-
-html
+html /* This makes the default font size 10px. All rem values would match so 1.5rem would equal 15px */
   font-size 62.5%
 body
   font-size 1.5em
   line-height 1.6
   font-weight 400
   color $default_font_colour
+  font-family $main_font
 
 h1,h2,h3,h4,h5,h6
   margin-top 0
@@ -37,16 +30,16 @@ h6
   line-height 1.6
   letter-spacing 0
 p
-  margin-top 0
-  
+  margin-top 0 
 a
-  color darken($default_font_colour,10)
+  color $default_link_colour
   &:hover
-    color darken($default_font_colour,15)
+    color darken($default_link_colour,15)
     
 code
   padding .2rem .5rem
   margin 0 .2rem
+  font-family $code_font
   font-size 90%
   white-space nowrap
   background #F1F1F1
@@ -111,5 +104,3 @@ pre > code
     font-size $h5_size
   h6
     font-size $h6_size
-
-// @media (min-width 1200px)
