--- a/src/stylus/_visible_hidden.styl
+++ b/src/stylus/_visible_hidden.styl
@@ -1,36 +1,40 @@
 @media (max-width 767px)
-  .hide-mob
-    display none    
-  .show-tab
-    display none    
-  .show-lap
+  .hide-default
     display none
-  .show-des
-    display none
+  .hide-s,.hide-m,.hide-l
+    display initial
+     
+  .show-default
+    display initial 
+  .show-s,.show-m,.show-l
+    display none    
 @media (min-width 768px)
-  .hide-tab
+  .hide-default,.hide-m,.hide-l
+    display initial
+  .hide-s
     display none
-  .show-mob
+    
+  .show-default,.show-m,.show-l
     display none
-  .show-lap
-    display none
-  .show-des
-    display none
+  .show-s
+    display initial
 @media (min-width 992px)
-  .hide-lap
+  .hide-default,.hide-s,.hide-l
+    display initial
+  .hide-m
     display none
-  .show-mob
+    
+  .show-default.show-s,.show-l
     display none
-  .show-tab
-    display none        
-  .show-des
-    display none
+  .show-m
+    display initial     
 @media (min-width 1200px)
-  .hide-des
+  .hide-default,.hide-s,.hide-m
+    display initial
+  .hide-l
     display none
-  .show-mob
+    
+  .show-default,.show-s,.show-m
     display none
-  .show-tab
-    display none
-  .show-lap
-    display none
+  .show-l
+    display initial
