Minor changes to forms: Removed automatic round corners, fixed some margin issues between labels. Added Cssmin to Gruntfile to automatically create layout.min.css for dist

--- a/src/stylus/_config.styl
+++ b/src/stylus/_config.styl
@@ -2,8 +2,8 @@
 # GRID VARIABLES - NECESSARY FOR GRID TO WORK
 # AMOUNT OF COLUMNS CAN BE ADJUSTED BUT NEW RISE CLASSES WILL HAVE TO BE MANUALLY CREATED INSIDE OF _grid.styl 
 */
-$12_rise_wth = 100%
-$1_rise_wth = $12_rise_wth / 12
+$12_riser_wth = 100%
+$1_riser_wth = $12_riser_wth / 12
 
 /* 
 # DEFAULT PATHS 
