--- a/src/stylus/_grid.styl
+++ b/src/stylus/_grid.styl
@@ -1,7 +1,7 @@
-rise_width($rise_num)
-  $1_rise_wth * $rise_num
+riser_width($riser_num)
+  $1_riser_wth * $riser_num
 
-.rise-1,.rise-2,.rise-3,.rise-4,.rise-5,.rise-6,.rise-7,.rise-8,.rise-9,.rise-10,.rise-11,.rise-12,.rise-s1,.rise-s2,.rise-s3,.rise-s4,.rise-s5,.rise-s6,.rise-s7,.rise-s8,.rise-s9,.rise-s10,.rise-s11,.rise-s12,.rise-m1,.rise-m2,.rise-m3,.rise-m4,.rise-m5,.rise-m6,.rise-m7,.rise-m8,.rise-m9,.rise-m10,.rise-m11,.rise-m12,.rise-l1,.rise-l2,.rise-l3,.rise-l4,.rise-l5,.rise-l6,.rise-l7,.rise-l8,.rise-l9,.rise-l10,.rise-l11,.rise-l12
+.riser-1,.riser-2,.riser-3,.riser-4,.riser-5,.riser-6,.riser-7,.riser-8,.riser-9,.riser-10,.riser-11,.riser-12,.riser-s1,.riser-s2,.riser-s3,.riser-s4,.riser-s5,.riser-s6,.riser-s7,.riser-s8,.riser-s9,.riser-s10,.riser-s11,.riser-s12,.riser-m1,.riser-m2,.riser-m3,.riser-m4,.riser-m5,.riser-m6,.riser-m7,.riser-m8,.riser-m9,.riser-m10,.riser-m11,.riser-m12,.riser-l1,.riser-l2,.riser-l3,.riser-l4,.riser-l5,.riser-l6,.riser-l7,.riser-l8,.riser-l9,.riser-l10,.riser-l11,.riser-l12
   width 100%
   float left
   box-sizing border-box
@@ -18,199 +18,199 @@ rise_width($rise_num)
   margin-right 5px
   box-sizing border-box
 
-.rise-1
-  width $1_rise_wth    
-.rise-2
-  width rise_width(2)
-.rise-3
-  width rise_width(3)    
-.rise-4
-  width rise_width(4) 
-.rise-5
-  width rise_width(5) 
-.rise-6
-  width rise_width(6)
-.rise-7
-  width rise_width(7)   
-.rise-8
-  width rise_width(8) 
-.rise-9
-  width rise_width(9)   
-.rise-10
-  width rise_width(10)   
-.rise-11
-  width rise_width(11) 
-.rise-12
-  width rise_width(12)
+.riser-1
+  width $1_riser_wth    
+.riser-2
+  width riser_width(2)
+.riser-3
+  width riser_width(3)    
+.riser-4
+  width riser_width(4) 
+.riser-5
+  width riser_width(5) 
+.riser-6
+  width riser_width(6)
+.riser-7
+  width riser_width(7)   
+.riser-8
+  width riser_width(8) 
+.riser-9
+  width riser_width(9)   
+.riser-10
+  width riser_width(10)   
+.riser-11
+  width riser_width(11) 
+.riser-12
+  width riser_width(12)
   margin-left 0
 .offset-1
-  margin-left $1_rise_wth
+  margin-left $1_riser_wth
 .offset-2
-  margin-left rise_width(2) 
+  margin-left riser_width(2) 
 .offset-3
-  margin-left rise_width(3)
+  margin-left riser_width(3)
 .offset-4
-  margin-left rise_width(4)
+  margin-left riser_width(4)
 .offset-5
-  margin-left rise_width(5)
+  margin-left riser_width(5)
 .offset-6
-  margin-left rise_width(6) 
+  margin-left riser_width(6) 
 .offset-7
-  margin-left rise_width(7) 
+  margin-left riser_width(7) 
 .offset-8
-  margin-left rise_width(8)
+  margin-left riser_width(8)
 .offset-9
-  margin-left rise_width(9) 
+  margin-left riser_width(9) 
 .offset-10
-  margin-left rise_width(10) 
+  margin-left riser_width(10) 
 .offset-11
-  margin-left rise_width(11)
+  margin-left riser_width(11)
   
 @media (min-width 768px)
-  .rise-s1
-    width $1_rise_wth
-  .rise-s2
-    width rise_width(2)
-  .rise-s3
-    width rise_width(3)    
-  .rise-s4
-    width rise_width(4) 
-  .rise-s5
-    width rise_width(5) 
-  .rise-s6
-    width rise_width(6)
-  .rise-s7
-    width rise_width(7)   
-  .rise-s8
-    width rise_width(8) 
-  .rise-s9
-    width rise_width(9)   
-  .rise-s10
-    width rise_width(10)   
-  .rise-s11
-    width rise_width(11) 
-  .rise-s12
-    width rise_width(12)
+  .riser-s1
+    width $1_riser_wth
+  .riser-s2
+    width riser_width(2)
+  .riser-s3
+    width riser_width(3)    
+  .riser-s4
+    width riser_width(4) 
+  .riser-s5
+    width riser_width(5) 
+  .riser-s6
+    width riser_width(6)
+  .riser-s7
+    width riser_width(7)   
+  .riser-s8
+    width riser_width(8) 
+  .riser-s9
+    width riser_width(9)   
+  .riser-s10
+    width riser_width(10)   
+  .riser-s11
+    width riser_width(11) 
+  .riser-s12
+    width riser_width(12)
     margin-left 0
   .offset-s1
-    margin-left $1_rise_wth
+    margin-left $1_riser_wth
   .offset-s2
-    margin-left rise_width(2) 
+    margin-left riser_width(2) 
   .offset-s3
-    margin-left rise_width(3)
+    margin-left riser_width(3)
   .offset-s4
-    margin-left rise_width(4)
+    margin-left riser_width(4)
   .offset-s5
-    margin-left rise_width(5)
+    margin-left riser_width(5)
   .offset-s6
-    margin-left rise_width(6) 
+    margin-left riser_width(6) 
   .offset-s7
-    margin-left rise_width(7) 
+    margin-left riser_width(7) 
   .offset-s8
-    margin-left rise_width(8)
+    margin-left riser_width(8)
   .offset-s9
-    margin-left rise_width(9) 
+    margin-left riser_width(9) 
   .offset-s10
-    margin-left rise_width(10) 
+    margin-left riser_width(10) 
   .offset-s11
-    margin-left rise_width(11)
+    margin-left riser_width(11)
 
 @media (min-width 992px)
-  .rise-m1
-    width $1_rise_wth   
-  .rise-m2
-    width rise_width(2)
-  .rise-m3
-    width rise_width(3)    
-  .rise-m4
-    width rise_width(4) 
-  .rise-m5
-    width rise_width(5) 
-  .rise-m6
-    width rise_width(6)
-  .rise-m7
-    width rise_width(7)   
-  .rise-m8
-    width rise_width(8) 
-  .rise-m9
-    width rise_width(9)   
-  .rise-m10
-    width rise_width(10)   
-  .rise-m11
-    width rise_width(11) 
-  .rise-m12
-    width rise_width(12)
+  .riser-m1
+    width $1_riser_wth   
+  .riser-m2
+    width riser_width(2)
+  .riser-m3
+    width riser_width(3)    
+  .riser-m4
+    width riser_width(4) 
+  .riser-m5
+    width riser_width(5) 
+  .riser-m6
+    width riser_width(6)
+  .riser-m7
+    width riser_width(7)   
+  .riser-m8
+    width riser_width(8) 
+  .riser-m9
+    width riser_width(9)   
+  .riser-m10
+    width riser_width(10)   
+  .riser-m11
+    width riser_width(11) 
+  .riser-m12
+    width riser_width(12)
     margin-left 0
   .offset-m1
-    margin-left $1_rise_wth
+    margin-left $1_riser_wth
   .offset-m2
-    margin-left rise_width(2) 
+    margin-left riser_width(2) 
   .offset-m3
-    margin-left rise_width(3)
+    margin-left riser_width(3)
   .offset-m4
-    margin-left rise_width(4)
+    margin-left riser_width(4)
   .offset-m5
-    margin-left rise_width(5)
+    margin-left riser_width(5)
   .offset-m6
-    margin-left rise_width(6) 
+    margin-left riser_width(6) 
   .offset-m7
-    margin-left rise_width(7) 
+    margin-left riser_width(7) 
   .offset-m8
-    margin-left rise_width(8)
+    margin-left riser_width(8)
   .offset-m9
-    margin-left rise_width(9) 
+    margin-left riser_width(9) 
   .offset-m10
-    margin-left rise_width(10) 
+    margin-left riser_width(10) 
   .offset-m11
-    margin-left rise_width(11)
+    margin-left riser_width(11)
     
 @media (min-width 1200px)
-  .rise-l1
-    width $1_rise_wth    
-  .rise-l2
-    width rise_width(2)
-  .rise-l3
-    width rise_width(3)    
-  .rise-l4
-    width rise_width(4) 
-  .rise-l5
-    width rise_width(5) 
-  .rise-l6
-    width rise_width(6)
-  .rise-l7
-    width rise_width(7)   
-  .rise-l8
-    width rise_width(8) 
-  .rise-l9
-    width rise_width(9)   
-  .rise-l10
-    width rise_width(10)   
-  .rise-l11
-    width rise_width(11) 
-  .rise-l12
-    width rise_width(12)
+  .riser-l1
+    width $1_riser_wth    
+  .riser-l2
+    width riser_width(2)
+  .riser-l3
+    width riser_width(3)    
+  .riser-l4
+    width riser_width(4) 
+  .riser-l5
+    width riser_width(5) 
+  .riser-l6
+    width riser_width(6)
+  .riser-l7
+    width riser_width(7)   
+  .riser-l8
+    width riser_width(8) 
+  .riser-l9
+    width riser_width(9)   
+  .riser-l10
+    width riser_width(10)   
+  .riser-l11
+    width riser_width(11) 
+  .riser-l12
+    width riser_width(12)
     margin-left 0
   .offset-l1
-    margin-left $1_rise_wth
+    margin-left $1_riser_wth
   .offset-l2
-    margin-left rise_width(2) 
+    margin-left riser_width(2) 
   .offset-l3
-    margin-left rise_width(3)
+    margin-left riser_width(3)
   .offset-l4
-    margin-left rise_width(4)
+    margin-left riser_width(4)
   .offset-l5
-    margin-left rise_width(5)
+    margin-left riser_width(5)
   .offset-l6
-    margin-left rise_width(6) 
+    margin-left riser_width(6) 
   .offset-l7
-    margin-left rise_width(7) 
+    margin-left riser_width(7) 
   .offset-l8
-    margin-left rise_width(8)
+    margin-left riser_width(8)
   .offset-l9
-    margin-left rise_width(9) 
+    margin-left riser_width(9) 
   .offset-l10
-    margin-left rise_width(10) 
+    margin-left riser_width(10) 
   .offset-l11
-    margin-left rise_width(11)
+    margin-left riser_width(11)
     
 
