--- a/src/stylus/_utilities.styl
+++ b/src/stylus/_utilities.styl
@@ -22,7 +22,7 @@ dl,figure
   margin-bottom 2.5rem
 
 /* CLEARING */
-.container:after,.row:after,.clear-it
+.container:after,.row:after,label:after,.clear-it
   content ""
   display table
   clear both
