Created _block.styl. Minor changes to other .styl files

--- a/src/stylus/_typography.styl
+++ b/src/stylus/_typography.styl
@@ -31,14 +31,18 @@ h6
   line-height 1.6
   letter-spacing 0
 p
+  font-size 1.4rem
   margin-top 0
-  margin-bottom 2.5rem
+  margin-bottom 0
+  margin-left 5px
+  padding-top 7.5px
+  padding-bottom 5px  
   
 a
-  color $neutral
+  color darken($neutral, 15)
   text-decoration none
   &:hover
-    color darken($neutral,15)
+    color darken($neutral, 20)
     text-decoration none
 
     
