--- a/src/stylus/_config.styl
+++ b/src/stylus/_config.styl
@@ -15,12 +15,14 @@ $img_path = "../img/"
 /* 
 # COLOUR SCHEME
 # MANUALLY CHANGE THESE HERE TO CHANGE THE COLOUR OF ALL PRE-DEFINED ELEMENTS
+# NEUTRAL IS, BY DEFAULT, THE MAIN SITE COLOUR
 */
 $neutral = #6A98E1 //Blue
 $bad = #F74662 //Red
 $medium = #FFA86A //Orange
 $good = #60E59E //Green
 $default_font_colour = #333 //Grey
+$default_site_colour = $neutral
 
 /* 
 # FONTS
@@ -50,25 +52,3 @@ $h3_size = 3rem
 $h4_size = 2.4rem
 $h5_size = 1.8rem
 $h6_size = 1.5rem 
-
-/* 
-# SLICK CAROUSEL VARIABLES
-<<<<<<< HEAD
-# NOT RECOMMENDED TO CHANGE THESE
-=======
-# NOT RECOMMENDED TO CHANGE THESE VARIABLES
->>>>>>> origin/master
-*/
-$slick-font-path = $font_path 
-$slick-font-family = "slick" 
-$slick-loader-path = "./" 
-$slick-arrow-color = white 
-$slick-dot-color = black 
-$slick-dot-color-active =  $slick-dot-color 
-$slick-prev-character =  ">" 
-$slick-next-character =  "<" 
-$slick-dot-character =  "•" 
-$slick-dot-size =  6px 
-$slick-opacity-default =  0.75 
-$slick-opacity-on-hover =  1 
-$slick-opacity-not-active =  0.25 
