--- a/src/stylus/_lists.styl
+++ b/src/stylus/_lists.styl
@@ -1,14 +1,19 @@
 /* LISTS */
 ul 
   list-style circle inside
+  .li-title
+    width 30%
+    margin 0
+    padding 2px
+    font-weight 600
+  .li-body
+    width 40%
+    margin 0
 ol 
   list-style decimal inside
 ol, ul 
   padding-left 0
   margin-top 0
-  margin-bottom 2.5rem
-ul ul,ul ol,ol ol,ol ul 
-  margin 1.5rem 0 1.5rem 3rem
-  font-size 90% 
+  margin-bottom 2.5rem 
 li 
   margin-bottom 1rem
