--- a/src/stylus/_utilities.styl
+++ b/src/stylus/_utilities.styl
@@ -11,6 +11,10 @@
   float left
 .round /* Makes any element have round corners */
   border-radius 4px
+.shadow-left
+  box-shadow -3px 4px 10px 2px rgba(0,0,0,0.3)
+.shadow-right 
+  box-shadow 3px 4px 10px 2px rgba(0,0,0,0.3)
 
 /* MISC */
 hr
