Minor chnages to _block and _grid

--- a/src/stylus/_block.styl
+++ b/src/stylus/_block.styl
@@ -1,5 +1,6 @@
 .block
   margin-bottom 35px
+  margin-left 10px
   img
     max-width 90%
     max-height 90%
@@ -38,13 +39,13 @@
       font-size 1.4rem
       .fa
         background-color lighten($default_site_colour, 5)
-        padding 3.5px 3.5px 5px 3.5px
+        padding 0.35rem 0.35rem 0.5rem 0.35rem
       .round
         .fa
           border-top-left-radius 4px
           border-bottom-left-radius 4px
       li 
-        width 85%
+        width 95%
         background-color lighten($default_site_colour, 20)
       
     
