Minor naming changes

--- a/src/stylus/_forms.styl
+++ b/src/stylus/_forms.styl
@@ -18,7 +18,7 @@ form
     content ""
     display table
     clear both         
-    .labelBody 
+    .label-body 
       display inline-block
       margin-left .5rem
       margin-right .5rem
