--- a/src/stylus/_grid.styl
+++ b/src/stylus/_grid.styl
@@ -6,7 +6,7 @@ riser_width($riser_num)
   width 100%
   float left
   box-sizing border-box
-.fullPod /* Full page width container */
+.full-pod /* Full page width container */
   width 100%
   max-width 100%
   clear both
